gcc/testsuite/rust.test/xfail_compile/func5.rs
fn func() -> i32 {
    return; // { dg-error "expected .i32. got ...." }
}

fn main() {
    func();
}
